fixed z-index headr menu toggle

--- a/css/modules/header.css
+++ b/css/modules/header.css
@@ -47,7 +47,7 @@
     position: absolute;
     left: 25px;
     overflow: hidden;
-
+    z-index: 100;
 }
 
 .header .menu-toggle span{
